# remove-comments-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  remove_comments.py
tests/: test_remove_comments.py
