[tool.poetry]
name = "remove-comments"
version = "0.1.0"
description = "A pre-commit hook to remove inline comments from code files."
authors = ["Ashlynn <ashlynn@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"