[project]
name = "remove-comments"
version = "0.1.1"
description = "A pre-commit hook to remove inline comments from code files."
requires-python = ">=3.10"
dependencies = []
license = "MIT"
authors = [ {name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io" } ]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git"
]
